--- a/Lab20B.ipynb
+++ b/Lab20B.ipynb
@@ -389,7 +389,7 @@
     "\n",
     "\n",
     "\n",
-    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "api_key = os.getenv(\"API_KEY\")\n",
     "\n",
     "\n",
     "# Initialize Tello and connect\n",
